bug 372271 - Drag and dropping of hyperlink from 2.0 to trunk URL bar results in malformatted URL.  r+sr=neil, r=gavin